# reskia

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
binding/: reskia.h  (+1 more)
bindings/rust/reskia/: Cargo.toml  build.rs
skcms/: CMakeLists.txt
skia/: CMakeLists.txt  LICENSE  reskia.cpp  reskia.h
skia/binding/: reskia_ffi.cpp  reskia_ffi.h  reskia_status.h  sk_alpha_type.cpp  sk_alpha_type.h  sk_android_codec.cpp  sk_android_codec.h  sk_annotation.cpp  sk_auto_canvas_restore.cpp  sk_avif_decoder.cpp  sk_b_box_hierarchy.cpp  sk_b_box_hierarchy.h  sk_bitmap.cpp  sk_bitmap.h  sk_blend_mode.cpp  sk_blend_mode.h  sk_blender.cpp  sk_blender.h  sk_blenders.cpp  sk_blenders.h  sk_bmp_decoder.cpp  sk_bmp_decoder.h  sk_canvas.cpp  sk_canvas.h  sk_capabilities.cpp  sk_capabilities.h  sk_codec.cpp  sk_codec.h  sk_color.cpp  sk_color.h  sk_color_4f.cpp  sk_color_4f.h  sk_color_filter.cpp  sk_color_filter.h  sk_color_filters.cpp  sk_color_filters.h  sk_color_info.cpp  sk_color_info.h  sk_color_matrix.cpp  sk_color_matrix.h  (+256 more)
skia/capi/: reskia_callback.h  reskia_ffi.cpp  reskia_ffi.h  sk_alpha_type.cpp  sk_alpha_type.h  sk_android_codec.cpp  sk_android_codec.h  sk_anim_codec_player.cpp  sk_anim_codec_player.h  sk_animated_image.cpp  sk_animated_image.h  sk_annotation.cpp  sk_annotation.h  sk_arc.cpp  sk_arc.h  sk_async_read_result-internal.h  sk_async_read_result.cpp  sk_async_read_result.h  sk_auto_canvas_restore.cpp  sk_auto_canvas_restore.h  sk_avif_decoder.cpp  sk_avif_decoder.h  sk_b_box_hierarchy.cpp  sk_b_box_hierarchy.h  sk_bitmap.cpp  sk_bitmap.h  sk_blend_mode.cpp  sk_blend_mode.h  sk_blender.cpp  sk_blender.h  sk_blenders.cpp  sk_blenders.h  sk_bmp_decoder.cpp  sk_bmp_decoder.h  sk_camera.cpp  sk_camera.h  sk_canvas.cpp  sk_canvas.h  sk_canvas_state_utils.cpp  sk_canvas_state_utils.h  (+354 more)
skia/handles/: static_sk_blender-internal.h  static_sk_blender.cpp  static_sk_capabilities-internal.h  static_sk_capabilities.cpp  static_sk_codec-internal.h  static_sk_codec.cpp  static_sk_color-internal.h  static_sk_color.cpp  static_sk_color_4f.cpp  static_sk_color_matrix.cpp  static_sk_color_space-internal.h  static_sk_contour_measure.cpp  static_sk_cubic_resampler.cpp  static_sk_data-internal.h  static_sk_data_table.cpp  static_sk_document.cpp  static_sk_drawable-internal.h  static_sk_drawable_gpu_draw_handler.cpp  static_sk_encoder-internal.h  static_sk_encoder_frame-internal.h  static_sk_encoder_frame.cpp  static_sk_executor-internal.h  static_sk_executor.cpp  static_sk_font.cpp  static_sk_font_mgr-internal.h  static_sk_font_style_set.cpp  static_sk_i_size.cpp  static_sk_id_change_listener-internal.h  static_sk_id_change_listener.cpp  static_sk_image-internal.h  static_sk_image_filter-internal.h  static_sk_image_generator-internal.h  static_sk_image_generator.cpp  static_sk_image_info.cpp  static_sk_m_44.cpp  static_sk_mask_builder.cpp  static_sk_mask_filter.cpp  static_sk_mesh_vertex_buffer-internal.h  static_sk_mesh_vertex_buffer.cpp  static_sk_path_effect.cpp  (+39 more)
skia/include/codec/: SkAndroidCodec.h
skia/include/core/: SkColorFilter.h  SkFont.h  SkFontMgr.h  SkMatrix.h  SkPath.h  SkPathBuilder.h  SkPathMeasure.h
skia/include/gpu/: MutableTextureState.h
skia/include/pathops/: SkPathOps.h
skia/modules/skpath/: CMakeLists.txt
skia/static/: handle_table.hpp  static_sk_android_codec-internal.h  static_sk_android_codec.cpp  static_sk_android_codec.h  static_sk_b_box_hierarchy-internal.h  static_sk_b_box_hierarchy.cpp  static_sk_b_box_hierarchy.h  static_sk_blend_mode-internal.h  static_sk_blend_mode.cpp  static_sk_blend_mode.h  static_sk_blender-internal.h  static_sk_blender.cpp  static_sk_blender.h  static_sk_canvas-internal.h  static_sk_canvas.cpp  static_sk_canvas.h  static_sk_capabilities-internal.h  static_sk_capabilities.cpp  static_sk_capabilities.h  static_sk_codec-internal.h  static_sk_codec.cpp  static_sk_codec.h  static_sk_codecs_decoder-internal.h  static_sk_codecs_decoder.cpp  static_sk_codecs_decoder.h  static_sk_color-internal.h  static_sk_color.cpp  static_sk_color.h  static_sk_color_4f-internal.h  static_sk_color_4f.cpp  static_sk_color_4f.h  static_sk_color_filter-internal.h  static_sk_color_filter.cpp  static_sk_color_filter.h  static_sk_color_info-internal.h  static_sk_color_info.cpp  static_sk_color_info.h  static_sk_color_matrix-internal.h  static_sk_color_matrix.cpp  static_sk_color_matrix.h  (+268 more)
skia/test/: test.cpp  test.h  test_anim_codec_player_utils_smoke.cpp  test_animated_image_utils_smoke.cpp  test_annotation_android_codec_invalid_input_smoke.cpp  test_auto_canvas_restore_bbox_invalid_input_smoke.cpp  test_bitmap_invalid_input_smoke.cpp  test_blender_invalid_input_smoke.cpp  test_blenders_invalid_input_smoke.cpp  test_camera_utils_smoke.cpp  test_canvas_invalid_input_smoke.cpp  test_canvas_utils_smoke.cpp  test_codec_invalid_input_smoke.cpp  test_codec_smoke.cpp  test_color_core_invalid_input_smoke.cpp  test_color_filter_invalid_input_smoke.cpp  test_color_info_space_invalid_input_smoke.cpp  test_color_matrix_filter_invalid_input_smoke.cpp  test_color_table_invalid_input_smoke.cpp  test_color_values_invalid_input_smoke.cpp  test_contour_path_measure_invalid_input_smoke.cpp  test_custom_typeface_utils_smoke.cpp  test_data_invalid_input_smoke.cpp  test_data_table_invalid_input_smoke.cpp  test_decoder_invalid_input_smoke.cpp  test_document_invalid_input_smoke.cpp  test_drawable_flattenable_invalid_input_smoke.cpp  test_encoded_cubic_invalid_input_smoke.cpp  test_encoder_invalid_input_smoke.cpp  test_enum_capabilities_graphics_invalid_input_smoke.cpp  test_event_paint_filter_utils_smoke.cpp  test_file_stream_invalid_input_smoke.cpp  test_font_arguments_metrics_invalid_input_smoke.cpp  test_font_config_interface_utils_smoke.cpp  test_font_invalid_input_smoke.cpp  test_font_mgr_invalid_input_smoke.cpp  test_font_style_set_invalid_input_smoke.cpp  test_gpu_context_capi_smoke.mm  test_gpu_surface_capi_smoke.mm  test_image_filter_invalid_input_smoke.cpp  (+68 more)
skpath/: CMakeLists.txt
skresources/: CMakeLists.txt
svg/: CMakeLists.txt
(+949 files in other folders)
